--- a/css/index.css
+++ b/css/index.css
@@ -348,14 +348,17 @@ footer p {
     }
 
     h2 {
-        font-size: 20px;
+        font-size: 22px;
     }
     p {
-        font-size: 14px;
+        font-size: 16px;
     }
+
     .container {
         max-width: 800px;
+        min-width: 501px;
     }
+
    /* Header */
     header {
         display: flex;
@@ -386,7 +389,7 @@ footer p {
 
     .hero h1 {
        
-        font-size: 60px;
+        font-size: 5em;
         text-align: center;
         line-height: 1.0;
         letter-spacing: 4px;
@@ -403,9 +406,9 @@ footer p {
 
     .hero button {
         margin-bottom: 50px;
-        margin-right: 85px;
+        margin-right: 70px;
         padding: 5px 35px;
-        /* align-self: center; */
+        align-self: center;
         font-size: 16px;
         border: 3px solid black;
 
@@ -418,24 +421,25 @@ footer p {
 
     main .main-content .top-row{
         margin: 5px 10px;
-        padding: 10px;
+        /* padding: 10px; */
     }
 
     .top-row {
         display: flex;
 	    justify-content: space-around;
 	    padding: 20px 0;
-	    border-top: 1px solid #000;
+        border-top: 3px solid #000;
+        border
 	    padding-top: 35px;
     }
     .t1 {
         /* display: inline-block; */
-        width: 40%;
+        width: 45%;
         /* margin: 0 20px 20px 0; */
     }
     .t2 {
-        display: inline-block;
-        width: 40%;
+        /* display: inline-block; */
+        width: 45%;
         /* margin: 0 0 20px 20px; */
     }
     
@@ -443,9 +447,37 @@ footer p {
 
     .main-image {
         margin: 0px auto;
+        display: inline;
     }
     .middle-img {
-        width: 85%;
-        align: center;
-    
+        width: 88%;
+        margin-left: 6%
+    }
+        /* bottom row */
+
+     .bottom-row {
+            display: flex;
+            justify-content: space-around;
+            padding: 20px 0;
+            padding-top: 35px;
+        }
+        .b1 {
+            /* display: inline-block; */
+            width: 28%;
+            /* margin: 0 20px 20px 0; */
+        }
+        .b2 {
+            /* display: inline-block; */
+            width: 28%;
+            /* margin: 0 0 20px 20px; */
+        }
+        .b3 {
+            /* display: inline-block; */
+            width: 28%;
+            /* margin: 0 0 20px 20px; */
+        }
+        /* contact */
+        .Contact {
+            margin: 50px 0 0 50px;
+        }
 }
