--- a/css/index.css
+++ b/css/index.css
@@ -348,10 +348,10 @@ footer p {
     }
 
     h2 {
-        font-size: 22px;
+        font-size: 18px;
     }
     p {
-        font-size: 16px;
+        font-size: 12px;
     }
 
     .container {
@@ -450,7 +450,7 @@ footer p {
         display: inline;
     }
     .middle-img {
-        width: 88%;
+        width: 100%;
         margin-left: 6%
     }
         /* bottom row */
@@ -478,8 +478,9 @@ footer p {
         }
         /* contact */
         .Contact {
-            margin: 50px 0 0 50px;
+            margin: 50px 0 50 50px;
         }
+        /* services */
 }
 
 /* 500 or less styles */
@@ -541,11 +542,11 @@ footer p {
     }
 
     .hero h1 {
-       
-        font-size: 3em;
+       margin-top: -5px;
+        font-size: 3.5em;
         text-align: center;
         line-height: 1.0;
-        letter-spacing: 4px;
+        letter-spacing: 2px;
     }
 
     .heroText {
@@ -579,21 +580,18 @@ footer p {
 
     .top-row {
         display: flex;
-	    justify-content: space-around;
-	    padding: 20px 0;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-content: center;
+	    /* margining: 20px 0; */
         border-top: 3px solid #000;
-        border
-	    padding-top: 35px;
+        
     }
     .t1 {
-        /* display: inline-block; */
-        width: 45%;
-        /* margin: 0 20px 20px 0; */
+        width: 85%;
     }
     .t2 {
-        /* display: inline-block; */
-        width: 45%;
-        /* margin: 0 0 20px 20px; */
+        width: 85%;
     }
     
     /* middle image */
@@ -610,27 +608,25 @@ footer p {
 
      .bottom-row {
             display: flex;
-            justify-content: space-around;
-            padding: 20px 0;
-            padding-top: 35px;
+            flex-flow: column wrap;
+            justify-content: center;
+            align-content: center;
+            border-bottom: 3px solid black;
+            /* border-radius: 5px; */
         }
         .b1 {
-            /* display: inline-block; */
-            width: 28%;
-            /* margin: 0 20px 20px 0; */
+            width: 85%;
         }
         .b2 {
-            /* display: inline-block; */
-            width: 28%;
-            /* margin: 0 0 20px 20px; */
+            width: 85%;
         }
         .b3 {
-            /* display: inline-block; */
-            width: 28%;
-            /* margin: 0 0 20px 20px; */
+            width: 85%;
         }
         /* contact */
         .Contact {
-            margin: 50px 0 0 50px;
+            margin: 50px 0 30px 30px;
         }
+
+
 }
