final commit. completed mvp and stretch
final commit. services page did not need additional styles for mobile ( interesting). will await feedback :)

--- a/css/index.css
+++ b/css/index.css
@@ -708,5 +708,5 @@ footer p {
             margin: 50px 0 30px 30px;
         }
 
-
+/* Services page did not need additional editing at 500px */
 }
